fix: add string format guard ; ignore tricky cases